; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/iwrap/extr_iwrap.c_iwrap_check_connection.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/iwrap/extr_iwrap.c_iwrap_check_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"LIST\00", align 1
@rcv_buf = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"LIST \00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"LIST 0\00", align 1
@connected = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iwrap_check_connection() #0 {
  %1 = call i32 @iwrap_mux_send(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @_delay_ms(i32 100)
  %3 = load i32, i32* @rcv_buf, align 4
  %4 = call i64 @strncmp(i32 %3, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 5)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %0
  %7 = load i32, i32* @rcv_buf, align 4
  %8 = call i64 @strncmp(i32 %7, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i32 6)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %6, %0
  store i32 0, i32* @connected, align 4
  br label %12

11:                                               ; preds = %6
  store i32 1, i32* @connected, align 4
  br label %12

12:                                               ; preds = %11, %10
  %13 = load i32, i32* @connected, align 4
  ret i32 %13
}

declare dso_local i32 @iwrap_mux_send(i8*) #1

declare dso_local i32 @_delay_ms(i32) #1

declare dso_local i64 @strncmp(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
